<?xml version="1.0"?>
<package format="2">
  <name>theta_star_planner</name>
  <version>0.0.0</version>
  <description>The theta_star_planner package</description>
  <maintainer email="amr_research@todo.todo">amr_research</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>costmap_2d</depend>
  <depend>pluginlib</depend>
  <depend>nav_core</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>smoother</depend>

  <export>
    <nav_core plugin="${prefix}/bgp_plugin.xml"/>
  </export>
</package>
